fixed some layout issues

--- a/css/style.less
+++ b/css/style.less
@@ -8,19 +8,19 @@ body {
   background: @bodyBackgroundColor;
   color: contrast(@bodyBackgroundColor);
   font: 14px arial;
+  padding: 0 10px;
 }
 
 main {
   max-width: 940px;
-  margin: 0 auto;
-  
-  border: 1px solid #ddd;
-  margin: 10px;
+  margin: 10px auto;
   padding: 10px;
+  background: white;
+  border: 1px solid #ddd;
   .border-radius(3px);
 
-  @rowHeight: 30px;
   form {
+    @rowHeight: 30px;
     line-height: @rowHeight;
     .clearblock;
 
@@ -30,21 +30,19 @@ main {
       display: block;
       float: left;
       padding: 0 5px;
+      margin: 0 10px 10px 0;
       .box-sizing(border-box);
 
       &[type="text"] {
+        width: 300px;
+        max-width: 100%;
         border: 1px solid #ddd;
         .border-radius(3px);
       }
     }
-
-    input + input {
-      margin-left: 10px;
-    }
   }
 
   .todo-list {
-    margin-top: 10px;
     padding: 10px 10px 0 0px;
     border-top: 1px solid #ddd;
   }
